Added test and refactored code
